Fix modal z-index

--- a/src/css/scenes/equipoGotejamento.less
+++ b/src/css/scenes/equipoGotejamento.less
@@ -34,7 +34,7 @@
         background-color: #90DEEE;
         border-radius: 100%;
         border: 0.4rem solid black;
-        z-index: 4;
+        z-index: 1;
         font-family: arial;
         font-size: 3rem;
         padding: 1%;
